--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -70,7 +70,7 @@
   <br>
 
   <div class="row">
-    <div class="btn-group col-sm-4">
+    <div class="btn-group col-sm-3">
       <button type="button" class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-size:30px;">
         All Artists
       </button>
@@ -126,8 +126,8 @@
                 <%= art.artist.country %>, <%= art.artist.birth %> - <%= art.artist.death %>
               </div>
             </div>
-            <%= link_to "Google Maps", art.location_link, :target=>["_blank"], class:"col-sm-5 offset-sm-1 btn btn-primary", style: "text-decoration:none; font-size:20px;" %>
-            <%= link_to "Street View", art.view_link, :target=>["_blank"], class:"col-sm-4 offset-sm-1 btn btn-primary", style: "text-decoration:none; font-size:20px;" %>
+            <%= link_to "Google Maps", art.location_link, :target=>["_blank"], class:"col-sm-5 offset-sm-1 btn btn-primary", style: "text-decoration:none; font-size:22px;" %>
+            <%= link_to "Street View", art.view_link, :target=>["_blank"], class:"col-sm-4 offset-sm-1 btn btn-primary", style: "text-decoration:none; font-size:22px;" %>
             <!-- <div class="d-flex justify-content-between align-items-center" style="margin-top:10px;">
               <div class="btn-group">
                 <%= link_to 'Show', art, class: "btn btn-sm btn-outline-secondary" %>
@@ -159,3 +159,5 @@
       });
   });
 </script>
+
+PV数：<%=  Impression.where(controller_name: :arts, action_name: :index).size %>
