change blaket place

--- a/app/views/impressions/index.html.erb
+++ b/app/views/impressions/index.html.erb
@@ -110,9 +110,9 @@
         <td><%= art.controller_name %></td>
         <td><%= art.action_name %></td>
         <td><%= art.impressionable_id %></td>
-        <td><%= art.request_hash %>[]</td>
-        <td><%= art.ip_address %>[]</td>
-        <td><%= art.session_hash %>[]</td>
+        <td><%= art.request_hash %></td>
+        <td>[]<%= art.ip_address %></td>
+        <td>[]<%= art.session_hash %></td>
       </tr>
     <% end %>
   </tbody>
