--- a/app/views/impressions/index.html.erb
+++ b/app/views/impressions/index.html.erb
@@ -131,12 +131,13 @@
       <th>request_hash</th>
       <th>ip_address</th>
       <th>session_hash</th>
+      <th>created_at</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @impressions_art.each do |art| %>
+    <% Impression.all.order(id: "DESC").each do |art| %>
       <tr>
         <td><%= art.controller_name %></td>
         <td><%= art.action_name %></td>
@@ -144,6 +145,7 @@
         <td><%= art.request_hash %></td>
         <td>[]<%= art.ip_address %></td>
         <td>[]<%= art.session_hash %></td>
+        <td>[]<%= art.created_at %></td>
       </tr>
     <% end %>
   </tbody>
