--- a/app/views/impressions/index.html.erb
+++ b/app/views/impressions/index.html.erb
@@ -33,7 +33,7 @@
   </thead>
   <tbody>
     <tr>
-      <td>arts</td>
+      <td class="text-center">arts</td>
       <td>index</td>
       <td></td>
       <td>Home</td>
@@ -49,7 +49,7 @@
       <% if @arts.exists?(id: i) %>
         <% art = @arts.find(i) %>
         <tr>
-          <td>arts</td>
+          <td class="text-center">arts</td>
           <td>show</td>
           <td><%= i %></td>
           <td><%= art.artist.name %></td>
@@ -86,7 +86,7 @@
     <% for i in 1..@artists.maximum(:id) do %>
       <% if @artists.exists?(id: i) %>
         <tr>
-          <td>arts</td>
+          <td class="text-center">arts</td>
           <td>show</td>
           <td>per artist</td>
           <td><%= @artists.find(i).name %></td>
@@ -102,7 +102,7 @@
     <%# そのartistでソートされた回数 %>
     <% for i in 1..@impressions_artist.maximum(:impressionable_id) do %>
     <tr>
-      <td>artists</td>
+      <td class="text-center">artists</td>
       <td>show</td>
       <td><%= i %></td>
       <td><%= @artists.find(i).name %></td>
@@ -125,13 +125,13 @@
 <table>
   <thead>
     <tr>
-      <th>controller_name</th>
-      <th>action_name</th>
-      <th>impressionable_id</th>
-      <th>request_hash</th>
-      <th>ip_address</th>
-      <th>session_hash</th>
-      <th>created_at</th>
+      <th>[]controller_name</th>
+      <th>[]action_name</th>
+      <th>[]impressionable_id</th>
+      <th>[]request_hash</th>
+      <th>[]ip_address</th>
+      <th>[]session_hash</th>
+      <th>[]created_at</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -139,13 +139,13 @@
   <tbody>
     <% Impression.all.order(id: "DESC").each do |art| %>
       <tr>
-        <td><%= art.controller_name %></td>
+        <td class="text-center"><%= art.controller_name %></td>
         <td><%= art.action_name %></td>
         <td><%= art.impressionable_id %></td>
-        <td><%= art.request_hash %></td>
+        <td>[]<%= art.request_hash.truncate(20) %></td>
         <td>[]<%= art.ip_address %></td>
-        <td>[]<%= art.session_hash %></td>
-        <td>[]<%= art.created_at %></td>
+        <td>[]<%= art.session_hash.truncate(20) %></td>
+        <td>[]<%= art.created_at.in_time_zone('Tokyo') %></td>
       </tr>
     <% end %>
   </tbody>
