--- a/app/views/impressions/index.html.erb
+++ b/app/views/impressions/index.html.erb
@@ -155,7 +155,7 @@
         <% else %>
           <td></td>
         <% end %>
-        <td>[]<%= art.created_at.in_time_zone('Tokyo') %></td>
+        <td style="width:250px;">[]<%= art.created_at.in_time_zone('Tokyo') %></td>
       </tr>
     <% end %>
   </tbody>
