arts#edit year default modified

--- a/app/views/arts/_form.html.erb
+++ b/app/views/arts/_form.html.erb
@@ -23,7 +23,7 @@
         <%= form.label :year %>
       </div>
       <div class="col-lg-2">
-        <%= form.number_field :year, class: "form-control", placeholder: "1916", value: 1877 %>
+        <%= form.number_field :year, class: "form-control", placeholder: 1877 %>
       </div>
     </div>
 
