--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -1,28 +1,41 @@
 <script type="text/javascript">
     function initMap() {
 
-        var test ={lat: <%= @latitude %>, lng: <%= @longitude %>};
-        var map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 15,
-            center: test
-        });
-        var transitLayer = new google.maps.TransitLayer();
-        transitLayer.setMap(map);
-
+      var position ={lat: <%= @latitude %>, lng: <%= @longitude %>};
+      var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 15,
+          center: position
+      });
+      var transitLayer = new google.maps.TransitLayer();
+      transitLayer.setMap(map);
+      <% if @art.latitude.present? %>
+      <% if @art.longitude.present? %>
         var contentString = '<%= @art.title %>, <%= @art.artist.name %>';
-        var infowindow = new google.maps.InfoWindow({
+        var infoWindow = new google.maps.InfoWindow({
             content: contentString
         });
 
         var marker = new google.maps.Marker({
-            position:test,
+            position: position,
             map: map,
             title: contentString
         });
 
-        marker.addListener('click', function() {
-            infowindow.open(map, marker);
+        //ON
+        marker.addListener('mouseover', () => {
+          infoWindow.open(map, marker);
+        }, false);
+
+        //OUT
+        marker.addListener('mouseout', () => {
+          infoWindow.close();
+        }, false);
+
+        marker.addListener('click', () => {
+            infoWindow.open(map, marker);
         });
+      <% end %>
+      <% end %>
     }
 </script>
 <script async defer
