--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -65,7 +65,7 @@
 <div class="container-fluid pc-width">
   <div class="row">
     <div class="col-lg-12">
-      <h1>My Favorite Paintings' Location & Street View</h1>
+      <h1>Street View & Location of My Favorite Paintings</h1>
     </div>
   </div>
 
