--- a/app/views/arts/new.html.erb
+++ b/app/views/arts/new.html.erb
@@ -1,8 +1,9 @@
 <div class="container-fluid">
   <div class="row">
     <h1 class="col-lg-6 offset-lg-3">Post Painting</h1>
+    <h5 class="col-lg-6 offset-lg-3">* Required</h5>
   </div>
 </div>
-<br>
+
 
 <%= render 'form', art: @art %>
