--- a/app/views/arts/edit.html.erb
+++ b/app/views/arts/edit.html.erb
@@ -1,8 +1,8 @@
 <div class="container-fluid">
   <div class="row">
-    <h1 class="col-lg-6 offset-lg-2">Edit Art</h1>
+    <h1 class="col-lg-6 offset-lg-3">Edit Art</h1>
+    <h5 class="col-lg-6 offset-lg-3">* Required</h5>
   </div>
 </div>
-<br>
 
 <%= render 'form', art: @art %>
