impressions trash not seen

--- a/app/views/impressions/index.html.erb
+++ b/app/views/impressions/index.html.erb
@@ -140,23 +140,25 @@
 
   <tbody>
     <% Impression.all.order(id: "DESC").each do |art| %>
-      <tr>
-        <td class="text-center"><%= art.controller_name %></td>
-        <td><%= art.action_name %></td>
-        <td><%= art.impressionable_id %></td>
-        <% if art.request_hash.present? %>
-          <td>[]<%= art.request_hash.truncate(20) %></td>
-        <% else %>
-          <td></td>
-        <% end %>
-        <td>[]<%= art.ip_address %></td>
-        <% if art.session_hash.present? %>
-          <td>[]<%= art.session_hash.truncate(20) %></td>
-        <% else %>
-          <td></td>
-        <% end %>
-        <td style="width:250px;">[]<%= art.created_at.in_time_zone('Tokyo') %></td>
-      </tr>
+      <% unless art.ip_address == "175.177.119.139" || art.ip_address == "182.251.56.117" %>
+        <tr>
+          <td class="text-center"><%= art.controller_name %></td>
+          <td><%= art.action_name %></td>
+          <td><%= art.impressionable_id %></td>
+          <% if art.request_hash.present? %>
+            <td>[]<%= art.request_hash.truncate(20) %></td>
+          <% else %>
+            <td></td>
+          <% end %>
+          <td>[]<%= art.ip_address %></td>
+          <% if art.session_hash.present? %>
+            <td>[]<%= art.session_hash.truncate(20) %></td>
+          <% else %>
+            <td></td>
+          <% end %>
+          <td style="width:250px;">[]<%= art.created_at.in_time_zone('Tokyo') %></td>
+        </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
