embeded link to youtube explaining how to use this site

--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -64,8 +64,11 @@
 
 <div class="container-fluid pc-width">
   <div class="row">
-    <div class="col-lg-12">
+    <div class="col-lg-9">
       <h1>Street View & Location of My Favorite Paintings</h1>
+    </div>
+    <div class="col-lg-3">
+      <a href="https://youtu.be/JVDTvAaums0" target="_blank"><h2 class="pt-2">How to use this site</h2></a>
     </div>
   </div>
 
