--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -1,8 +1,4 @@
 <script type="text/javascript">
-  var contentString = [];
-  var infoWindow = [];
-  var position = [];
-  var marker = [];
   function initMap() {
 
       var center = {lat: <%= @arts.average(:latitude) %>, lng: <%= @arts.average(:longitude) %>};
@@ -13,44 +9,48 @@
       var transitLayer = new google.maps.TransitLayer();
       transitLayer.setMap(map);
 
-      <% for i in 1..@arts.maximum(:id) do %>
-        var i = <%= i %>;
-        <% if @arts.exists?(id: i) %>
-          <% art = @arts.find(i) %>
-          <% if art.latitude.present? %>
-          <% if art.longitude.present? %>
-            contentString[i] = '<%= art.title %>, <%= art.artist.name %>';
-            infoWindow[i] = new google.maps.InfoWindow({
-                content: contentString[i]
-            });
 
-            position[i] = {
-              lat: <%= art.latitude %>,
-              lng: <%= art.longitude %>
-            }
-            marker[i] = new google.maps.Marker({
-                position: position[i],
-                map: map,
-                title: contentString[i]
-            });
-
-            //ON
-            // marker[i].addListener('mouseover', () => {
-            //   infoWindow[i].open(map, marker[i]);
-            // }, false);
-
-            //OUT
-            // marker[i].addListener('mouseout', () => {
-            //   infoWindow[i].close();
-            // }, false);
-
-            // marker[i].addListener('click', () => {
-            //     infoWindow[i].open(map, marker[i]);
-            // });
-          <% end %>
-          <% end %>
+      const arts = [
+        <% @arts.each do |art| %>
+          {
+            id: <%= art.id %>,
+            latitude: <%= art.latitude %>,
+            longitude: <%= art.longitude %>,
+            title: "<%= art.title %>",
+            artist: "<%= art.artist.name %>",
+          },
         <% end %>
-      <% end %>
+      ]
+
+      arts.forEach(function (art){
+        var contentString = art.title + ', ' + art.artist
+        var infoWindow = new google.maps.InfoWindow({
+            content: contentString
+        });
+        var position = {
+          lat: art.latitude,
+          lng: art.longitude
+        }
+        var marker = new google.maps.Marker({
+            position: position,
+            map: map,
+            title: contentString
+        });
+
+        // ON
+        marker.addListener('mouseover', () => {
+          infoWindow.open(map, marker);
+        }, false);
+
+        // OUT
+        marker.addListener('mouseout', () => {
+          infoWindow.close();
+        }, false);
+
+        marker.addListener('click', () => {
+          location.href = "arts/" + art.id
+        });
+      });
   }
 </script>
 <script async defer
@@ -59,7 +59,7 @@
 
 
 
-<p id="notice"><%= notice %></p>
+<p id="notice"><%= notice %></p>id
 
 
 <div class="container-fluid pc-width">
