--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -49,8 +49,15 @@
 
 <div class="container-fluid pc-width">
   <div class="row">
-    <div class="col-lg-12" style="font-size:30px;">
-      <h1>Street View & Location of My Favorite Paintings</h1>
+    <div class="col-lg-3">
+      <%= link_to root_path do %>
+        <h1 class="home">artmap</h1>
+      <% end %>
+    </div>
+    <div class="col-lg-6">
+    </div>
+    <div class="col-lg-3">
+      <a href="https://youtu.be/JVDTvAaums0" target="_blank"><h2 class="pt-2 td-n">How to use this site</h2></a>
     </div>
   </div>
 
@@ -127,8 +134,7 @@
                 <%= art.artist.country %>, <%= art.artist.birth %> - <%= art.artist.death %>
               </div>
             </div>
-            <%= link_to "Google Maps", art.location_link, :target=>["_blank"], class:"col-sm-5 offset-sm-1 btn btn-primary", style: "text-decoration:none; font-size:20px;" %>
-            <%= link_to "Street View", art.view_link, :target=>["_blank"], class:"col-sm-4 offset-sm-1 btn btn-primary", style: "text-decoration:none; font-size:20px;" %>
+            <%= link_to "Street View", art.view_link, :target=>["_blank"], class:"col-sm-8 offset-sm-2 btn btn-primary", style: "text-decoration:none; font-size:20px;" %>
             <!-- <div class="d-flex justify-content-between align-items-center" style="margin-top:10px;">
               <div class="btn-group">
                 <%= link_to 'Show', art, class: "btn btn-sm btn-outline-secondary" %>
