--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -45,6 +45,14 @@
 <p id="notice"><%= notice %></p>
 
 <div class="container-fluid pc-width">
+  <div class="row mb-3">
+    <div class="col-lg-3">
+      <%= link_to root_path do %>
+        <h1 class="home">artmap</h1>
+      <% end %>
+    </div>
+  </div>
+
   <div class="row">
     <div class="col-lg-6 offset-lg-3 mt-0 prl-0">
       <%= image_tag @art.image.to_s, style:"width:100%;" %>
@@ -71,7 +79,7 @@
         <% if @art.location_link == nil  or @art.location_link == "" %>
           <%= link_to "Search in Google Maps", "https://www.google.co.jp/maps/", :target=>["_blank"], class:"btn btn-outline-primary", style: "text-decoration:none; font-size:20px;" %>
         <% else %>
-          <%= link_to "Google Maps", @art.location_link, :target=>["_blank"], class:"btn btn-primary", style: "text-decoration:none; font-size:20px;" %>
+          <%= link_to "Google Maps", @art.location_link, :target=>["_blank"], style: "text-decoration:none; font-size:20px;" %>
         <% end %>
       </div>
 
@@ -87,9 +95,7 @@
         <% end %>
       </div>
 
-      <div class="" style="margin-top:10px;">
-        <%= link_to 'Home', arts_path, class: "btn btn-outline-secondary", style: "text-decoration:none;" %>
-      </div>
+      
       <div class="" style="margin-top:10px;">
         <%= link_to 'Edit', edit_art_path(@art), class: "btn btn-outline-secondary" %>
         <%= link_to 'Delete', @art, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-secondary" %>
